<resources>
    <string name="app_name">DSC</string>
    <string name="dscfullname">Developer Student Club</string>
    <string name="intro">Student Developer Community</string>
    <string name="menu_project">Project Idea</string>
    <string name="des_1">This is a student community  designed to help them build their mobile and web development skills and knowledge. It is open to any student, ranging from novice developers who are just starting, to advanced developers who want to further their skills. It is intended to be a space for students to learn and collaborate as they solve mobile and web development problems. Student from different technical background meet and develop finalized products.  </string>
    <string name="intro1">Based on Google Developer Student Club </string>
    <string name="des2"> This Club is totally based on the Developer Student Club Program of Google. Students from various universities
        can form club in their institutions with different academic background. Click on the below button to read out more about
    Google program on Developer Student Club.</string>
    <string name="intro2">Functioning in Rajkiya Engineering College, Bijnor</string>
    <string name="des3">This club is currently functioning in Rajkiya Engineering College Bijnor (Chandpur), Uttar Pradesh. This is a government engineering college
    which is formerly known as Dr. Bhimrao Ambedkar Engineering College for Information Technology. To know more about this college please visit
    the website by clicking following button or you can visit https://recb.ac.in .</string>
    <string name="intro3"> Join Us</string>
    <string name="app_id">2643876289192147</string>
    <string name="des4">Join this club for skills development and contribute to your own society in many ways. i.e. by teaching skills to other students,etc. </string>
    <string name="des5">Our Motto </string>
    <string name="mot">Come Together..Learn Together..Grow Together..</string>
    <string name="alllogin">login at your convenience!!</string>
    <string name="alert_no_account">Don\'t have an account? Create one now!</string>
    <string name="alert_have_account">Alraedy have an account? Sign In here!</string>

    <string name="menu_home">Home</string>
    <string name="menu_edu">e-Library</string>
    <string name="menu_training">Training</string>
    <string name="menu_workshops">Workshops</string>
    <string name="menu_Events">Events</string>
    <string name="menu_spandan">Tech Spandan</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_compete">Competition</string>
    <string name="menu_donate">Donate For Code</string>
    <string name="menu_about">About Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_leader">Leaderboard</string>
    <string name="dscrun">Developer Student Club is run by students of Rajkiya Engineering College Bijnor</string>
    <string name="user_settings">User Settings</string>
    <string name="app_settings">App Settings</string>

    <string name="title_activity_main_quiz">MainQuizActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
